tests/purs/failing/CoercibleRepresentational7.out
Error found:
in module [33mMain[0m
at tests/purs/failing/CoercibleRepresentational7.purs:8:10 - 8:16 (line 8, column 10 - line 8, column 16)

  No type class instance was found for
  [33m                              [0m
  [33m  Prim.Coerce.Coercible (N a0)[0m
  [33m                        a0    [0m
  [33m                              [0m

  Solving this instance requires the newtype constructor [33mN[0m to be in scope.

while checking that type [33mforall (a :: Type) (b :: Type). Coercible @Type a b => a -> b[0m
  is at least as general as type [33mN a0 -> a0[0m
while checking that expression [33mcoerce[0m
  has type [33mN a0 -> a0[0m
in value declaration [33munwrap[0m

where [33ma0[0m is a rigid type variable
        bound at (line 8, column 10 - line 8, column 16)

See https://github.com/purescript/documentation/blob/master/errors/NoInstanceFound.md for more information,
or to contribute content related to this error.

